--- a/practicle-assignment/package.json
+++ b/practicle-assignment/package.json
@@ -10,6 +10,7 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.8.6",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
@@ -17,10 +18,12 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.38.0",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.4",
     "sass": "^1.42.1",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
